; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/esas2r/extr_esas2r_main.c_write_fs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/esas2r/extr_esas2r_main.c_write_fs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.kobject = type { i32 }
%struct.bin_attribute = type { i32 }
%struct.esas2r_adapter = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.kobject*, %struct.bin_attribute*, i8*, i32, i64)* @write_fs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_fs(%struct.file* %0, %struct.kobject* %1, %struct.bin_attribute* %2, i8* %3, i32 %4, i64 %5) #0 {
  %7 = alloca %struct.file*, align 8
  %8 = alloca %struct.kobject*, align 8
  %9 = alloca %struct.bin_attribute*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca %struct.esas2r_adapter*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %7, align 8
  store %struct.kobject* %1, %struct.kobject** %8, align 8
  store %struct.bin_attribute* %2, %struct.bin_attribute** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i64 %5, i64* %12, align 8
  %16 = load %struct.kobject*, %struct.kobject** %8, align 8
  %17 = call %struct.esas2r_adapter* @esas2r_adapter_from_kobj(%struct.kobject* %16)
  store %struct.esas2r_adapter* %17, %struct.esas2r_adapter** %13, align 8
  %18 = load i64, i64* %12, align 8
  %19 = call i32 @min(i32 4, i64 %18)
  store i32 %19, i32* %14, align 4
  store i32 0, i32* %15, align 4
  %20 = load %struct.esas2r_adapter*, %struct.esas2r_adapter** %13, align 8
  %21 = load i8*, i8** %10, align 8
  %22 = load i32, i32* %11, align 4
  %23 = load i64, i64* %12, align 8
  %24 = call i32 @esas2r_write_fs(%struct.esas2r_adapter* %20, i8* %21, i32 %22, i64 %23)
  store i32 %24, i32* %15, align 4
  %25 = load i32, i32* %15, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %6
  store i32 0, i32* %15, align 4
  br label %28

28:                                               ; preds = %27, %6
  %29 = load i32, i32* %14, align 4
  ret i32 %29
}

declare dso_local %struct.esas2r_adapter* @esas2r_adapter_from_kobj(%struct.kobject*) #1

declare dso_local i32 @min(i32, i64) #1

declare dso_local i32 @esas2r_write_fs(%struct.esas2r_adapter*, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
